--- a/package/templates/impala.j2
+++ b/package/templates/impala.j2
@@ -10,6 +10,13 @@ LLAMA_SITE_PATH={{llama_site_path}}
 
 IMPALA_CATALOG_ARGS=" \
     -log_dir=${IMPALA_LOG_DIR} \
+	-catalog_service_host=${IMPALA_CATALOG_SERVICE_HOST} \
+    -state_store_host=${IMPALA_STATE_STORE_HOST} \
+    {% if security_enabled %}
+    -kerberos_reinit_interval=60 \
+    -principal=impala/{{current_host_name}}@WESHARE.COM \
+    -keytab_file=/etc/security/keytabs/impala.service.keytab \
+    {% endif %}
 	"
 IMPALA_STATE_STORE_ARGS=" \
     -log_dir=${IMPALA_LOG_DIR} \
@@ -17,7 +24,7 @@ IMPALA_STATE_STORE_ARGS=" \
 	{% if security_enabled %}
     -kerberos_reinit_interval=60 \
     -principal=impala/{{current_host_name}}@EXAMPLE.COM \
-    -keytab_file=/etc/security/keytabs/impala-http.keytab \
+    -keytab_file=/etc/security/keytabs/impala.service.keytab \
 	{% endif %}
 	"
 IMPALA_SERVER_ARGS=" \
@@ -34,7 +41,7 @@ IMPALA_SERVER_ARGS=" \
 	{% if security_enabled %}
     -kerberos_reinit_interval=60 \
     -principal=impala/{{current_host_name}}@EXAMPLE.COM \
-    -keytab_file=/etc/security/keytabs/impala-http.keytab \
+    -keytab_file=/etc/security/keytabs/impala.service.keytab \
 	{% endif %}
 	"
 
