--- a/package/templates/impala.j2
+++ b/package/templates/impala.j2
@@ -5,6 +5,8 @@ IMPALA_BACKEND_PORT=22000
 IMPALA_LOG_DIR={{impala_log_dir}}
 IMPALA_SCRATCH_DIR={{impala_scratch_dir}}
 MEM_LIMIT={{mem_limit}}
+FAIR_SCHEDULER_ALLOCATION_PATH={{fair_scheduler_allocation_path}}
+LLAMA_SITE_PATH={{llama_site_path}}
 
 IMPALA_CATALOG_ARGS=" \
     -log_dir=${IMPALA_LOG_DIR} \
@@ -33,6 +35,8 @@ IMPALA_SERVER_ARGS=" \
     -use_statestore \
     -state_store_host=${IMPALA_STATE_STORE_HOST} \
     -be_port=${IMPALA_BACKEND_PORT} \
+    -fair_scheduler_allocation_path=${FAIR_SCHEDULER_ALLOCATION_PATH} \
+    -llama_site_path=${LLAMA_SITE_PATH}
 	{% if security_enabled %}
     -kerberos_reinit_interval=60 \
     -principal=impala/{{current_host_name}}@{{realm_name}} \
